--- a/.env
+++ b/.env
@@ -29,5 +29,5 @@ APP_SECRET=f426504b7e3a4b4a7140615131506e1b
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:Erick2691@127.0.0.1:3306/db_lws_71160
 ###< doctrine/doctrine-bundle ###
