--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,14 +1,32 @@
 security:
+    encoders:
+        App\Entity\User:
+            algorithm: bcrypt
+            cost: 12
+
+        Symfony\Component\Security\Core\User\User: plaintex        
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        moierick:
+            entity:
+                class: App\Entity\User
+                property: username
+
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: users_in_memory
+            anonymous: true
+            form_login:
+                    login_path: login
+                    check_path: login
+            logout:
+                path: app_logout
+                target: /
+            guard:
+                authenticators:
+                    - App\Security\LoginFormAuthenticator
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -19,5 +37,14 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/admin, roles: ROLE_SYMPATISANT}
         # - { path: ^/profile, roles: ROLE_USER }
+
+    role_hierarchy:
+        # Un adherent hérite des droits des sympathisants
+        ROLE_ADHERENT:       [ROLE_SYMPATHISANT]
+        ROLE_TECHNIQUE:      [ROLE_TECHNIQUE, ROLE_SYMPATHISANT]
+        ROLE_MANAGER_LYON:   [ROLE_ADHERENT]
+        ROLE_ADMIN:          [ROLE_MANAGER_LYON, ROLE_TECHNIQUE] 
+        # On garde ce rôle superadmin, il nous resservira par la suite
+        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
